<resources>
    <string name="app_name">LogInPage</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="id">Already have an account?</string>
    <string name="submit">Submit</string>
    <string name="login">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user_register_now">New User?Register Now</string>
    <string name="todo">TODO</string>
</resources>